--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -896,14 +896,9 @@ main.flex-fill{
 
 /* Big opening quote mark */
 .hero-overlay blockquote::before{
-  content: "“";
-  display:block;
-  font-family: "GystRegular", serif;
-  font-size: clamp(46px, 7vw, 84px);
-  line-height: 1;
-  opacity: 0.7;
-  margin-bottom: -10px;
+  content: none !important;
 }
+
 
 /* Quote text */
 .hero-overlay blockquote p{
@@ -919,9 +914,9 @@ main.flex-fill{
 
 /* Author */
 .hero-overlay blockquote footer{
-  font-size: 0.8rem;
+  font-size: 2.0rem;
   letter-spacing: 0.08em;
-  text-transform: lowercase;
+  text-transform: uppercase;
   opacity: 0.65;
   font-style: italic;
   font-family: "GystRegular", serif;
