--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -800,7 +800,6 @@ main.flex-fill{
   width: 100%;
   height: 140px;
   object-fit: cover;
-  border-radius: 12px;
   display: block;
   margin-bottom: 16px;
 
@@ -897,4 +896,7 @@ main.flex-fill{
     padding: 18px 18px;
     border-radius: 14px;
   }
+}
+.space-card-img{
+  border-radius: 24px !important;   /* soft rounded rectangle */
 }
