--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -954,13 +954,25 @@ main.flex-fill{
 .about-portrait{
   aspect-ratio: 4 / 5;
   object-position: center 25%;
+  filter: 
+    brightness(1)
+    contrast(1.02)
+    saturate(1);
 }
+
 
 /* Workplace: crop top and pull image upward */
 .about-work{
   aspect-ratio: 16 / 10;
   object-position: center 15%; /* crops ceiling & lifts people up */
+  
+  /* soften + harmonise with hero */
+  filter: 
+    brightness(0.9)
+    contrast(0.95)
+    saturate(0.9);
 }
+
 
 /* Caption */
 .about-caption{
