--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -964,14 +964,15 @@ main.flex-fill{
 /* Workplace: crop top and pull image upward */
 .about-work{
   aspect-ratio: 16 / 10;
-  object-position: center 15%; /* crops ceiling & lifts people up */
-  
+  object-position: center 15%;   /* lifts the people up, removes ceiling */
+
   /* soften + harmonise with hero */
   filter: 
     brightness(0.9)
     contrast(0.95)
     saturate(0.9);
 }
+
 
 
 /* Caption */
