--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -826,7 +826,7 @@ main.flex-fill{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center bottom; /* ← shows more of the bottom */
+  object-position: center 65%;
   display: block;
   filter: brightness(0.8) contrast(0.95);
 }
