--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -1173,3 +1173,7 @@ main.flex-fill{
   height: 100%;
 }
 
+/* Extra breathing room between top + bottom sections on Contact page */
+.section-hero-intro{
+  margin-bottom: 60px;
+}
