--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -1200,7 +1200,7 @@ main.flex-fill{
 /* Image card */
 .services-image-wrap{
   width: 100%;
-  height: auto;
+  height: 100%;
   min-height: 360px;     /* same logic as Contact */
   border-radius: 16px;
   overflow: hidden;
